# customer_churn_prediction

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  template.py
config/: config.yaml
resarch/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_selection.ipynb  05_model_evaluation.ipynb  06_model_prediction.ipynb  EDA_FE.ipynb
src/customer_churn_prediction/: __init__.py
src/customer_churn_prediction/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_prediction.py  model_trainer.py
src/customer_churn_prediction/config/: configuration.py
src/customer_churn_prediction/constants/: __init__.py
src/customer_churn_prediction/entity/: config_entity.py
src/customer_churn_prediction/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_training.py  stage_05_model_evaluation.py  stage_06_prediction.py
src/customer_churn_prediction/utils/: common.py  mlflow_utils.py
static/css/: styles.css
templates/: index.html  message.html  results.html  training_message.html
